<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/sync_header">


        <EditTextPreference
            app:key="ip"
            android:inputType="numberDecimal"
            app:title="@string/ip_text"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="db"
            app:title="@string/db_name"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="username"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="password"
            android:inputType="textPassword"
            android:password="true"
            app:title="@string/sql_password"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>





</PreferenceScreen>